# codeAgent

./: .codeagent_fallback_state.json  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  4.0.0  AGENTS.md  AUTO_TODO_GENERATION_SUMMARY.md  CHANGELOG.md  CHECKPOINT_CHECKLIST.md  CHECKPOINT_LOCATION_UPDATE.md  FULL_ACCESS_CHEATSHEET.md  FULL_ACCESS_INTEGRATION_SUMMARY.md  LOGGING_IMPLEMENTATION.md  Makefile  README.md  SERVER_MONITORING_GUIDE.md  START_HERE.md  conftest.py  current_plan_task_1769900584.md  gemini.ask.1.md  gemini.ask.2.md  html_report.html  main.py  newPlan.md  new_functionality.py  pyproject.toml  pyrightconfig.json  pytest.ini  report.json  requirements-test.txt  requirements.txt  setup.py  temp_test_router.py  temp_verify_imports.py  test_basic_imports.py  test_config.yaml  test_gemini_output.md  test_intelligent_integration.py  test_mcp_imports.py  (+8 more)
.gemini_sessions/: test_session_1770321864.pkl  test_session_1770321928.pkl
.github/workflows/: tests.yml
config/: agents.yaml  config.yaml  llm_cost_config.yaml  llm_settings.yaml  logging.yaml  mcp_config.example.json  mcp_security.yaml  mcp_server.yaml  test_config.yaml  users.yaml
cursor_commands/: instruction_test_simple_1769110930_NEW_CHAT.txt  instruction_test_simple_1769114348_NEW_CHAT.txt
cursor_results/: result_full_cycle_1769160312.txt  result_server_test_1769160312.txt
docker/: Dockerfile.agent  Dockerfile.gemini  Dockerfile.security  README.md  docker-compose.agent.yml  docker-compose.gemini.yml  docker-compose.smart.yml  test_docker_agent.sh
docs/: AGENTS.md  IMPROVEMENT_TODO.md  LLM_MANAGER_EXPLAINED.md  README.md  REVISION_2026_01_20.md  REVISION_2026_01_26.md  REVISION_REPORT_2026_01_22.md  ROADMAP_2026.md  api_changes_documentation.md  architecture.md  checkpoint_recovery.md  conceptual_improvements.md  cursor-logging-instruction.md  cursor_communication.md  cursor_integration.md  cursor_setup_recommendations.md  implementation_roadmap.md  improvements_summary.md  logging_colors.md  logging_system.md  new_functionality_documentation.md  project_structure.md  quick_recovery_guide.md  quick_start_auto_todo.md  quick_start_logging.md  setup.md  test_docker_gemini_output.md  test_todo.md
docs/archive/: API_KEY_VERIFICATION.md  AUTO_PUSH_AFTER_COMMIT.md  CURSOR_CLI_FALLBACK.md  CURSOR_CLI_MODEL_TESTING_PLAN.md  FALLBACK_IMPLEMENTATION_SUMMARY.md  FULL_ACCESS_INTEGRATION_REPORT.md  HYBRID_INTERFACE_TEST_RESULTS.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PROCESS.md  INSTALL_CURSOR_AGENT.md  INSTALL_CURSOR_AGENT_DOCKER.md  MIGRATION_COMPLETE.md  SKEPTIC_ANALYSIS_2026_01_30.md  START_HERE.md  auto_todo_generation.md  cursor-logging-instruction.md  full_access_setup.md  improvements_summary.md  llm_integration.md
docs/changelog/: CHANGELOG.md  CHANGELOG_CURSOR_CLI.md  README.md  intelligent_llm_integration_20260123.md  llm_refactoring_20260123.md
docs/components/: configuration_manager.md
docs/configuration/: cursor_instructions.md  server_config.md
docs/core/: api.md  api_endpoints.md  architecture.md  cli_comparison.md  configuration_reference.md  di_container.md  instruction_processor.md  intelligent_llm_components.md  interfaces.md  llm_management.md  llm_module_architecture.md  logging.md  project_structure.md  (+3 more)
examples/: checkpoint_demo.py  gemini_api_example.py  gemini_cli_example.py  gemini_example.py  logging_demo.py
results/: flags_test.csv  models_simple.csv  summary.json
scripts/: agent.bat  benchmark_smart_agent.py  check_doc_links.py  check_gemini_availability.py  classify_and_move_tests.py  clean.py  generate_docs.py  generate_passwords.py  mark_task_done.py  monitor_server.py  run_ab_testing.py  run_llm_baseline_test.py  run_quality_checks.py  setup_git_ssh.bat  setup_git_ssh.sh  setup_git_ssh_en.bat  test_cost_monitor.py  test_learning_tool_cache.py  test_openai_keys.py  watch_logs.bat
smart_experience/: README.md
src/: __init__.py  checkpoint_manager.py  config_loader.py  config_manager.py  config_validator.py  cost_monitor.py  cursor_cli_interface.py  cursor_executor.py  cursor_file_interface.py  cursor_manager.py  cursor_ui_interface.py  error_handler.py  exceptions.py  fallback_state_manager.py  git_utils.py  hybrid_cursor_interface.py  new_functionality.py  plan_parser.py  prompt_formatter.py  report_watcher.py  security_utils.py  server.py  session_tracker.py  status_manager.py  task_logger.py  todo_manager.py
test/: API_TESTS_README.md  AUTO_SERVER_START.md  FIXES_APPLIED.md  FIX_TEST_OPENROUTER_DETAILED.md  QUICK_START.md  README.md  README_RUN_TESTS.md  __init__.py  check_server.py  check_setup.py  compare_keys.py  conftest.py  docker_utils.py  fix_encoding.py  fix_imports.py  run_comprehensive_tests.py  run_full_testing.py  run_tests.py  smoke_check.py  test_agent.py  test_agent_installation.py  test_agent_real_llm_creation.py  test_api_with_auto_start.py  test_auto_todo_generation.py  test_automatic_fallback.py  test_chat_lifecycle_fixed.py  test_checkpoint_integration.py  test_checkpoint_recovery.py  test_code_skeleton.py  test_complex_scenarios.py  test_comprehensive_validation.py  test_concurrent_server_startup.py  test_container_capabilities.py  test_context_analyzer_static.py  test_core_abstract_base_static.py  test_core_components_smoke.py  test_core_interfaces_static.py  test_core_quality_integration.py  test_core_smoke.py  test_core_static.py  (+90 more)
test_cursor_cli/: P0_TEST_RESULTS.md  README.md  TEST_RESULTS_SUMMARY.md  test_all_models.sh  test_p0_models.py  test_runner.py
test_debug_experience/: experience.json
test_integration_experience/: experience.json
test_integration_experience_-3050476417877776446/: experience.json
test_integration_experience_-4062575525251801822/: experience.json
test_integration_experience_-505117273171384468/: experience.json
test_integration_experience_-7655445931790908697/: experience.json
test_integration_experience_-8452454204510951503/: experience.json
test_smart_experience/: experience.json
todo/: CURRENT.md  GENERATED_20260123_20260122_224954.md  GENERATED_20260123_20260123_083422.md
(+427 files in other folders)
