[project]
name = "code-agent"
version = "0.1.0"
description = "Code Agent на базе CrewAI для автоматизации работы с проектами"
authors = [
    {name = "Code Agent Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "crewai>=0.1.0",
    "crewai-tools>=0.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # Для работы с Cursor IDE
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "mss>=9.0.1",
    "pygetwindow>=0.0.9",
    # Для работы с файлами и репортами
    "watchdog>=3.0.0",
    "aiofiles>=23.2.0",
    # Для работы с Git
    "GitPython>=3.1.40",
    # Для улучшенного логирования
    "colorlog>=6.8.0",
    "rich>=13.7.0",
    # Для HTTP сервера
    "flask>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-sugar>=0.9.7",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-sugar>=0.9.7",
    "pytest-html>=3.2.0",
    "coverage>=7.2.0",
    "responses>=0.23.0",
    "faker>=19.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "cursor: marks tests that require Cursor IDE",
    "llm: marks tests that require LLM API access",
    "docker: marks tests that require Docker",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
